# extrasuite

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  extrasuite  extrasuite.code-workspace  fabric.code-workspace  mkdocs.yml
client/: CHANGELOG.md  CLAUDE.md  EXTRADOC_BUGS.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
client/11aPwuVKbMYcBxP4jOxJODF_ktmHKkF1FvCUduKAl5k0/: comments.xml  index.xml
client/146bUTw38Vc8fJXw7D2sQ2JaAVUdmxZLCscHNXGBh-J0/: comments.xml  index.xml
client/17kmIdG_iSDA8E7NeKtmDgZRVab1fDM4EguaWOUeHbCY/: comments.xml  index.xml
client/18gIqGX9CpduOFlSJP8w6GrXWfcknApiYhDlA-DkAhxo/: comments.xml  index.xml
client/1F5_OEssSsEKdGQF_vLDEZXbYN0ekx0m0kWVTZw25i9Y/: comments.xml  index.xml
client/1FT2nIa3hT523gxZFR_RPstqR_LiwMOSmV9pZY62_o_k/: comments.xml  index.xml
client/1MKDJTTPs4JOgYKTeA730FxvtuOyYx0DrG4tUlyVAo_8/: comments.xml  index.xml
client/1Ov-qi7A3jLQLpyw3UnBsANYnlCIST2oJkLbmecQviBA/: comments.xml  index.xml
client/1TKVAwdmFjcrCWHy5NP5DQeZnByfAmvCJvpbLiC4HuKU/: comments.xml  index.xml
client/1fYJcYfJkiTFEpxbtSOSZnGxiVgUuQ3yS65A3H4MvMDM/: comments.xml  index.xml
client/1jcVolrtN6SOGiYC7Rx4DQjSkiM-YYJX1f51Ivt-CAVU/: comments.xml  index.xml
client/1n9Ht3XFs6R1_eIEui-9l64GRzsV2MuxaHi9P4mtPbPI/: comments.xml  index.xml
client/1oxIZPxPhSf2U_nJkKbKkxCnZEN2PvYsClVZFQQvcWyk/: comments.xml  index.xml
client/1rHLs1VVcqtCt-_YpHNUhF1bFJWQr-7B8dtvqyfSnwz0/: comments.xml  index.xml
client/1uut95pT1lQTl9afRJIuu20w9aBxX41ZM0PSbCgBth0U/: comments.xml  index.xml
client/examples/: basic_usage.py  gsheet_example.py
client/scripts/: generate_sheet_formula_help.py
client/src/: App.tsx
client/tests/: __init__.py  test_cli_help.py  test_credentials.py  test_drive.py  test_gmail_reader.py  test_reason_required.py  test_settings.py
extradoc/: .gitignore  CHANGELOG.md  CLAUDE.md  EDGE_CASE_ANALYSIS.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  REVIEW_LOG.md  TEST_COVERAGE_SUMMARY.md  pyproject.toml
extradoc/17kmIdG_iSDA8E7NeKtmDgZRVab1fDM4EguaWOUeHbCY/: document.xml
extradoc/docs/: README.md  adaptive-indexing-strategy.md  architectural-direction.md  backwards-walk-plan.md  comment-anchoring-limitation.md  comment-causes-insertion-deletion.md  continuation-notes.md  coordinate_contract.md  diff-implementation-plan.md  diff-system-review.md  diffmerge-design.md  extradoc-diff-engine-rewrite.md  extradoc-diff-specification.md  extradoc-spec.md  fixed-reconciliation-bugs.md  gaps.md  gemini_diff_spec_review.md  html-format-design.md  implementation-gap.md  index-summary-heuristics.md  insert-table-investigation.md  live-test-plan.md  live-verification-log.md  on-disk-format.md  phase4-push-implementation.md  plan-named-ranges-serde.md  rca-index-drift.md  reconcile-plan.md  reconcile-v3.md  reconciler-fix-plan.md  reconciler-semantic-ir-design.md  reconciler-semantic-ir-edge-cases-to-test.md  reconciler-semantic-ir-implementation-plan.md  reconciliation-gaps.md  refactor-insertion-paths.md  release-checklist.md  serde-testing-philosophy.md
extradoc/scripts/: README.md  capture_reconcile_v2_fixtures.py  fetch_docs.py  generate_api_types.py  live_drift_probe.py  live_markdown_convergence_probe.py  record_scenario.py  release_smoke_docs.py  replay_reconcile_v2_fixtures.py  test_indexer.py  test_mock_scenarios.py  test_push_md.py
extradoc/tests/: BATCH_UPDATE_TESTING_SUMMARY.md  __init__.py  test_aligner.py  test_batch_update_document_structure.py  test_batch_update_responses.md  test_block_diff.py  test_block_indexer.py  test_client_reconciler_versions.py  test_comment_ref_injection.py  test_comments_converter.py  test_composite_transport.py  test_content_generator.py  test_date_element.py  test_desugar.py  test_diff_engine.py  test_differ.py  test_engine.py  test_indexer.py  test_markdown_compare.py  test_mock_api.py  test_paragraph_style_reconciliation.py  test_parser.py  test_pull_integration.py  test_reconcile.py  test_run_fragmentation.py  test_sequence_diff.py  test_serde.py  test_serde_golden.py  test_serde_markdown.py  test_serde_markdown_blackbox.py  test_serde_markdown_bugs.py  test_serde_markdown_drift.py  test_serde_markdown_fuzzer.py  test_serde_markdown_leading_whitespace_bug.py  test_serde_markdown_roundtrip.py  test_serde_nested_list_colored_sep_bug.py  test_serde_xml_roundtrip.py  test_serde_xml_semantic.py  test_structural_generator.py  test_table_generator.py  (+3 more)
extradocx/: pyproject.toml
extradocx/testdata/: generate_test_docx.py  test_report.docx
extradocx/tests/: test_basic.py  test_e2e.py  test_md_diff.py
extraform/: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
extraform/docs/: architecture.md  on-disk-format.md
extraform/tests/: __init__.py  test_client.py  test_diff.py  test_integration.py  test_pristine.py  test_request_generator.py  test_transformer.py
extrasheet/: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
extrasheet/docs/: architecture.md  design-decisions.md  diff-push-spec.md  diff-reconciliation-spec.md  file-format-spec.md  gaps.md  gotchas-and-inconsistencies.md  llm-agent-guide.md  llm-agent-review.md  llm-instructions.md  on-disk-format.md  specification.md
extrasheet/examples/: basic_usage.py
extrasheet/scripts/: analyze_discovery.py  extract_batch_operations.py  generate_types.py
extrasheet/tests/: __init__.py  test_color_conversion.py  test_comments.py  test_diff.py  test_formula_compression.py  test_formula_refs.py  test_pull_integration.py  test_request_generator.py  test_structural_validation.py  test_transformer.py  test_two_phase_push.py  test_utils.py
extraslide/: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
extraslide/docs/: copy-workflow-plan.md  (+3 more)
extrasuite-client/: CLAUDE.md  README.md  pyproject.toml  run_tests.sh
server/: .dockerignore  .env.template  .gcloudignore  CLAUDE.md  Dockerfile  Dockerfile.dev  GCP_MARKETPLACE_DEPLOYMENT.md  README.md  cloudbuild.yaml  pyproject.toml
(+1631 files in other folders)
