[project]
name = "extrasuite"
version = "0.3.0"
description = "Client library for ExtraSuite - secure OAuth token exchange for CLI tools"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Sripathi Krishnan", email = "sripathi@think41.com"}
]
keywords = ["google", "oauth", "workspace", "sheets", "docs", "drive", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Session",
]

dependencies = []

[project.optional-dependencies]
# certifi is recommended for macOS SSL certificate handling
ssl = ["certifi>=2024.0.0"]

[project.scripts]
extrasuite = "extrasuite.client.__main__:main"

[project.urls]
Homepage = "https://github.com/think41/extrasuite"
Documentation = "https://extrasuite.think41.com"
Repository = "https://github.com/think41/extrasuite"
Issues = "https://github.com/think41/extrasuite/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/extrasuite"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "W",       # pycodestyle warnings
    "F",       # Pyflakes
    "I",       # isort
    "B",       # flake8-bugbear
    "C4",      # flake8-comprehensions
    "UP",      # pyupgrade
    "ARG",     # flake8-unused-arguments
    "SIM",     # flake8-simplify
    "TCH",     # flake8-type-checking
    "PTH",     # flake8-use-pathlib
    "RUF",     # Ruff-specific rules
    "PLC0415", # import-outside-top-level
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
# credentials.py uses intentional lazy imports for optional dependencies
"src/extrasuite/client/credentials.py" = ["PLC0415"]
# tests also use lazy imports to check if google-auth is available
"tests/test_credentials.py" = ["PLC0415"]

[tool.ruff.lint.isort]
known-first-party = ["extrasuite"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.7.0",
]
