[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "extradoc"
version = "0.4.2"
requires-python = ">=3.10"
description = "File-based Google Docs representation library for LLM agents"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Sripathi Krishnan", email = "sripathi@think41.com" }
]
keywords = ["google", "docs", "document", "llm", "agent", "extrasuite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27.0",
    "certifi>=2024.0.0",
    "keyring>=25.0.0",
    "diff-match-patch>=20230430",
    "pydantic>=2.0",
    "mistletoe>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/extradoc"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "W",       # pycodestyle warnings
    "F",       # Pyflakes
    "I",       # isort
    "B",       # flake8-bugbear
    "C4",      # flake8-comprehensions
    "UP",      # pyupgrade
    "ARG",     # flake8-unused-arguments
    "SIM",     # flake8-simplify
    "TCH",     # flake8-type-checking
    "PTH",     # flake8-use-pathlib
    "RUF",     # Ruff-specific rules
    "PLC0415", # import-outside-top-level
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
# Handler functions use a consistent (document, request, structure_tracker) signature
# for dispatch even when not all params are used.
"src/extradoc/mock/*_ops.py" = ["ARG001"]
"src/extradoc/mock/stubs.py" = ["ARG001"]
# Tests and scripts use local imports intentionally (test isolation, import-visibility tests).
"tests/*.py" = ["PLC0415"]
"scripts/*.py" = ["PLC0415"]
# These modules use deferred imports intentionally to avoid circular dependencies.
"src/extradoc/diffmerge/apply_ops.py" = ["PLC0415"]
"src/extradoc/serde/markdown/__init__.py" = ["PLC0415"]
"src/extradoc/serde/xml/__init__.py" = ["PLC0415"]

[tool.ruff.lint.isort]
known-first-party = ["extradoc"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
files = ["src/extradoc"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "diff_match_patch"
ignore_missing_imports = true

# reconcile_v2 is the legacy reconciler; reconcile_v3 is now the default.
# reconcile_v2.executor is still on the production path (batch execution +
# deferred-ID resolution), but the rest of reconcile_v2 is not actively
# maintained.  Suppress errors rather than fix them.
[[tool.mypy.overrides]]
module = [
    "extradoc.reconcile",
    "extradoc.reconcile.*",
    "extradoc.reconcile_v2",
    "extradoc.reconcile_v2.api",
    "extradoc.reconcile_v2.batches",
    "extradoc.reconcile_v2.canonical",
    "extradoc.reconcile_v2.content_align",
    "extradoc.reconcile_v2.diff",
    "extradoc.reconcile_v2.ir",
    "extradoc.reconcile_v2.layout",
    "extradoc.reconcile_v2.lower",
    "extradoc.reconcile_v2.parse",
    "extradoc.reconcile_v2.requests",
    "extradoc.reconcile_v2.table_diff",
    "extradoc.reconcile_v2.testing",
    "extradoc.mock",
    "extradoc.mock.*",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
