[project]
name = "extradocx"
version = "0.1.0"
description = "Experimental DOCX → GFM Markdown AST converter"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
extradocx = "extradocx.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/extradocx"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
