[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "extrasheet"
version = "0.1.0"
requires-python = ">=3.10"
description = "File-based Google Sheets representation library for LLM agents"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Sripathi Krishnan", email = "sripathi@think41.com" }
]
keywords = ["google", "sheets", "spreadsheet", "llm", "agent", "extrasuite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "extrasuite>=0.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/extrasheet"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "W",       # pycodestyle warnings
    "F",       # Pyflakes
    "I",       # isort
    "B",       # flake8-bugbear
    "C4",      # flake8-comprehensions
    "UP",      # pyupgrade
    "ARG",     # flake8-unused-arguments
    "SIM",     # flake8-simplify
    "TCH",     # flake8-type-checking
    "PTH",     # flake8-use-pathlib
    "RUF",     # Ruff-specific rules
    "PLC0415", # import-outside-top-level
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
# credentials.py uses intentional lazy imports for optional dependencies
"src/extrasheet/credentials.py" = ["PLC0415"]

[tool.ruff.lint.isort]
known-first-party = ["extrasheet"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
files = ["src/extrasheet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=extrasheet --cov-report=term-missing"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
