[project]
name = "extraslide"
version = "0.1.0"
description = "A Python library that simplifies editing Google Slides through an HTML-like abstraction"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Sripathi Krishnan", email = "Sripathi.Krishnan@gmail.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "extrasuite>=0.2.0",
    "httpx>=0.27.0",
    "pyfpgrowth>=1.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/think41/extrasuite"
Documentation = "https://extrasuite.think41.com"
Repository = "https://github.com/think41/extrasuite"
Issues = "https://github.com/think41/extrasuite/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/extraslide"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "W",       # pycodestyle warnings
    "F",       # Pyflakes
    "I",       # isort
    "B",       # flake8-bugbear
    "C4",      # flake8-comprehensions
    "UP",      # pyupgrade
    "ARG",     # flake8-unused-arguments
    "SIM",     # flake8-simplify
    "TCH",     # flake8-type-checking
    "PTH",     # flake8-use-pathlib
    "RUF",     # Ruff-specific rules
    "PLC0415", # import-outside-top-level
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
# credentials.py uses intentional lazy imports for optional dependencies
"src/extraslide/credentials.py" = ["PLC0415"]
# compression.py and overview.py use Path at runtime (not just type hints)
"src/extraslide/compression.py" = ["TCH003"]
"src/extraslide/overview.py" = ["TCH003"]

[tool.ruff.lint.isort]
known-first-party = ["extraslide"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
files = ["src/extraslide"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=extraslide --cov-report=term-missing"
asyncio_mode = "auto"
