[project]
name = "extrasuite-client"
version = "1.0.0"
description = "Client library for ExtraSuite - secure OAuth token exchange for CLI tools"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["google", "oauth", "workspace", "sheets", "docs", "drive", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Session",
]

# Zero external dependencies - stdlib only
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.7.0",
    "ty>=0.0.1a7",
]

[project.urls]
Homepage = "https://github.com/anthropics/extrasuite"
Documentation = "https://github.com/anthropics/extrasuite#readme"
Repository = "https://github.com/anthropics/extrasuite"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/extrasuite_client"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["extrasuite_client"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
