[project]
name = "extrasuite-client"
version = "1.0.0"
description = "Client library for ExtraSuite - secure OAuth token exchange for CLI tools"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["google", "oauth", "workspace", "sheets", "docs", "drive", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Session",
]

dependencies = [
    "keyring>=25.0.0",
    "certifi>=2024.0.0",
]


[project.urls]
Homepage = "https://github.com/anthropics/extrasuite"
Documentation = "https://github.com/anthropics/extrasuite#readme"
Repository = "https://github.com/anthropics/extrasuite"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/extrasuite_client"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src/extrasuite_client", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["extrasuite_client"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.7.0",
]
